--- a/scoreone.html
+++ b/scoreone.html
@@ -17,7 +17,7 @@
         <div class="flex-center flex-column">
             <h1 id="score1"> High Scores</h1>
             <ol class="highscore" id="highscorelist"></ol>
-            <a class="btn" href="frontgamepage.html">Go Home</a>
+            <a class="btn" href="index.html">Go Home</a>
         </div>
     </div>
     <script src="scoreone.js"></script>
